# jsengine

./: .gitignore  .metadata  CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/ws/yelo/jsengine/: JsenginePlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/ws/yelo/jsengine_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: jsengine.podspec
ios/Classes/: JsenginePlugin.h  JsenginePlugin.m  SwiftJsenginePlugin.swift
jerryscriptwrapper/: CMakeLists.txt  LICENSE  README.md  jerryscriptwrapper.c  testapp.c
jerryscriptwrapper/include/: jerryscriptwrapper.h
jerryscriptwrapper/jerryscript/jerry-core/: CMakeLists.txt
jerryscriptwrapper/jerryscript/jerry-ext/: CMakeLists.txt
jerryscriptwrapper/jerryscript/jerry-main/: CMakeLists.txt
jerryscriptwrapper/jerryscript/jerry-port/default/: CMakeLists.txt
jerryscriptwrapper/test-script/: test.js
lib/: jsengine.dart
lib/src/: otherlibsextensions.dart
test/: jsengine_test.dart
